Fixed styling of book image on mobile

--- a/src/components/Contentful/sass/sections/_our_services.scss
+++ b/src/components/Contentful/sass/sections/_our_services.scss
@@ -312,7 +312,7 @@ $svc-img-path: 'assets/images/services';
     font-size: 36px;
 
     @include mobile {
-      margin-top: 40px !important;
+      margin-top: 30px !important;
       margin-bottom: 25px !important;
       font-size: 30px;
     }
@@ -358,7 +358,20 @@ $svc-img-path: 'assets/images/services';
   }
 
   .contentful-prose {
-    img {
+    img.before {
+      display: none;
+
+      @include mobile {
+        max-width: 138px;
+        max-height: 212px;
+        display: block;
+        position: absolute;
+        left: 70%;
+        top: -45px;
+      }
+    }
+
+    img:not(.before) {
       margin-top: -60px;
 
       @include lg-desktop {
@@ -374,10 +387,10 @@ $svc-img-path: 'assets/images/services';
       @include tablet {
         max-width: 412px !important;
         max-height: 633px !important;
-        width: 150%;
       }
     
       @include mobile {
+        display: none;
       }
     }
   }
